remove .idea directory

--- a/validation_framework_annotations/.gitignore
+++ b/validation_framework_annotations/.gitignore
@@ -28,6 +28,7 @@ build/
 gradle-app.setting
 !gradle-wrapper.jar
 
+
 ## IntelliJ
 out/
 .idea/
@@ -66,3 +67,4 @@ nb-configuration.xml
 
 ## OS X
 .DS_Store
+.exercism
