--- a/tax_system/pom.xml
+++ b/tax_system/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.java.poc</groupId>
-    <artifactId>basic_structure</artifactId>
+    <artifactId>tax_system</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
