--- a/springsecurity/src/main/resources/application.properties
+++ b/springsecurity/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
 
 
 # Enables the DATA.SQL for DATABASE
@@ -9,7 +9,8 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:~/demodb
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
