--- a/Code-Challenges-Round-1/observability-latency/pom.xml
+++ b/Code-Challenges-Round-1/observability-latency/pom.xml
@@ -70,13 +70,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.1.2</version>
                 <configuration>
-                    <excludes>
+                    <excudes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </exclude>
-                    </excludes>
+                    </excudes>
                 </configuration>
             </plugin>
         </plugins>
