--- a/lunch_and_learn/antlr4/JavaWithANTLR/pom.xml
+++ b/lunch_and_learn/antlr4/JavaWithANTLR/pom.xml
@@ -10,13 +10,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
         <mockito.version>5.11.0</mockito.version>
         <assertj.version>3.25.3</assertj.version>
         <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
+        <antlr.version>4.13.2</antlr.version>
     </properties>
 
     <dependencies>
@@ -70,7 +71,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.7.1</version>
+            <version>${antlr.version}</version>
         </dependency>
 
     </dependencies>
@@ -95,14 +96,14 @@
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <useModulePath>false</useModulePath> <!-- Necessário para evitar conflitos com JPMS -->
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
-                <version>4.7.1</version>
+                <version>${antlr.version}</version>
                 <executions>
                     <execution>
                         <goals>
