--- a/lunch_and_learn/antlr4/StringTemplate/pom.xml
+++ b/lunch_and_learn/antlr4/StringTemplate/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>Aexample-api</artifactId>
+    <artifactId>StringTemplate</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -65,6 +65,12 @@
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>ST4</artifactId>
+            <version>4.3</version>
         </dependency>
 
     </dependencies>
