--- a/java-features-8/pom.xml
+++ b/java-features-8/pom.xml
@@ -13,6 +13,7 @@
         <module>default-methods</module>
         <module>optional-interfaces</module>
         <module>method-references</module>
+        <module>functional-interfaces</module>
     </modules>
 
     <properties>
