add the Dungeon Game

--- a/features-by-version/java-8/pom.xml
+++ b/features-by-version/java-8/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>domain-module</module>
         <module>lambda-expressions</module>
+        <module>lambda-expressions-functional-interfaces</module>
     </modules>
 
     <build>
