items to feature 8

--- a/features-by-version/java-8/pom.xml
+++ b/features-by-version/java-8/pom.xml
@@ -20,7 +20,8 @@
     <modules>
         <module>domain-module</module>
         <module>lambda-expressions</module>
-        <module>lambda-expressions-functional-interfaces</module>
+        <module>functional-interfaces</module>
+        <module>stream-api</module>
     </modules>
 
     <build>
