--- a/features-by-version/java-8/pom.xml
+++ b/features-by-version/java-8/pom.xml
@@ -22,6 +22,7 @@
         <module>lambda-expressions</module>
         <module>functional-interfaces</module>
         <module>stream-api</module>
+        <module>date-and-time-api</module>
     </modules>
 
     <build>
