--- a/features-by-version/java-8/java-stream-api/pom.xml
+++ b/features-by-version/java-8/java-stream-api/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.br.dev </groupId>
-    <artifactId>lambda-expressions</artifactId>
+    <artifactId>java-stream-api</artifactId>
     <version>1.0.0</version>
 
     <dependencies>
@@ -22,6 +22,5 @@
             <version>1.0.0</version>
         </dependency>
     </dependencies>
-
 
 </project>
